Refactoring: Moved interfaces into separate namespaces, added some LINQ goodness.

--- a/AdamDotCom.Amazon/source/AdamDotCom.Amazon.Application/AdamDotCom.Amazon.Application.csproj
+++ b/AdamDotCom.Amazon/source/AdamDotCom.Amazon.Application/AdamDotCom.Amazon.Application.csproj
@@ -32,8 +32,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="FileParameters.cs" />
-    <Compile Include="IAmazonApplication.cs" />
-    <Compile Include="IFileParameters.cs" />
+    <Compile Include="Interfaces\IAmazonApplication.cs" />
+    <Compile Include="Interfaces\IFileParameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AmazonApplication.cs" />
   </ItemGroup>
