Updates to get things running on GoDaddy's shared hosting environment.

--- a/AdamDotCom.Amazon.Service/ServiceHost/Web.config
+++ b/AdamDotCom.Amazon.Service/ServiceHost/Web.config
@@ -1,15 +1,35 @@
 <?xml version="1.0"?>
 <configuration>
   <system.serviceModel>
+    <serviceHostingEnvironment>
+      <baseAddressPrefixFilters>
+<!--        <add prefix="http://adam.kahtava.com/services" />-->
+      </baseAddressPrefixFilters>
+    </serviceHostingEnvironment>
+    <services>
+      <service name="AdamDotCom.Amazon.Service.AmazonService" behaviorConfiguration="Default">
+        <endpoint address="" binding="webHttpBinding" contract="AdamDotCom.Amazon.Service.IAmazon" behaviorConfiguration="Default" />
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="Default">
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata  httpGetEnabled="true"/>
         </behavior>
       </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="Default">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
   </system.serviceModel>
   <system.web>
-    <compilation debug="true"/>
+    <customErrors mode="Off"/>
+    <compilation debug="true">
+      <buildProviders>
+        <add extension=".svc" type="System.ServiceModel.Activation.ServiceBuildProvider, System.ServiceModel, Version=3.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+      </buildProviders>
+    </compilation>
   </system.web>
 </configuration>
