--- a/trunk/AdamDotCom.Amazon/source/AdamDotCom.Amazon.Domain/AdamDotCom.Amazon.Domain.csproj
+++ b/trunk/AdamDotCom.Amazon/source/AdamDotCom.Amazon.Domain/AdamDotCom.Amazon.Domain.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8AAA89A1-7D7D-4E43-9BDC-79C23B5DBBDE}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -36,6 +36,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
