--- a/AdamDotCom.Amazon.Service/ServiceHost/Web.config
+++ b/AdamDotCom.Amazon.Service/ServiceHost/Web.config
@@ -8,7 +8,7 @@
     </serviceHostingEnvironment>
     <services>
       <service name="AdamDotCom.Amazon.Service.AmazonService" behaviorConfiguration="Default">
-        <endpoint address="" binding="webHttpBinding" contract="AdamDotCom.Amazon.Service.IAmazon" behaviorConfiguration="Default" />
+        <endpoint address="" binding="webHttpBinding" contract="AdamDotCom.Amazon.Service.IAmazon" behaviorConfiguration="Default" bindingNamespace="http://adam.kahtava.com/services" />
       </service>
     </services>
     <behaviors>
