Added rest exception stuff.

--- a/AdamDotCom.Amazon.Service/Source/Service/Service.csproj
+++ b/AdamDotCom.Amazon.Service/Source/Service/Service.csproj
@@ -35,8 +35,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Dependencies\AdamDotCom.Amazon.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ServiceModel.Web, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Program Files\Microsoft WCF REST\WCF REST Starter Kit Preview 2\Assemblies\Microsoft.ServiceModel.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Runtime.Serialization">
@@ -48,6 +56,7 @@
     <Reference Include="System.ServiceModel.Web">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -59,6 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmazonService.cs" />
+    <Compile Include="Utilities\RestError.cs" />
+    <Compile Include="Utilities\WebHttpWithExceptions.cs" />
+    <Compile Include="Utilities\WebHttpWithExceptionsElement.cs" />
     <Compile Include="IAmazon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
