--- a/AdamDotCom.Amazon.Service/Source/ServiceHost/Web.config
+++ b/AdamDotCom.Amazon.Service/Source/ServiceHost/Web.config
@@ -1,28 +1,28 @@
 <?xml version="1.0"?>
 <configuration>
   <system.serviceModel>
-    <serviceHostingEnvironment>
-      <baseAddressPrefixFilters>
-<!--        <add prefix="http://adam.kahtava.com/services" />-->
-      </baseAddressPrefixFilters>
-    </serviceHostingEnvironment>
     <services>
       <service name="AdamDotCom.Amazon.Service.AmazonService" behaviorConfiguration="Default">
-        <endpoint address="" binding="webHttpBinding" contract="AdamDotCom.Amazon.Service.IAmazon" behaviorConfiguration="Default" bindingNamespace="http://adam.kahtava.com/services" />
+        <endpoint address="" binding="webHttpBinding" contract="AdamDotCom.Amazon.Service.IAmazon" behaviorConfiguration="Default" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="Default">
-          <serviceMetadata  httpGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="true" />
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="Default">
-          <webHttp />
+          <webHttpWithExceptions />
         </behavior>
       </endpointBehaviors>
     </behaviors>
+    <extensions>
+      <behaviorExtensions>
+        <add name="webHttpWithExceptions" type="AdamDotCom.Amazon.Service.Utilities.WebHttpWithExceptionsElement, AdamDotCom.Amazon.Service, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+      </behaviorExtensions>
+    </extensions>
   </system.serviceModel>
   <system.web>
     <customErrors mode="Off"/>
