--- a/AdamDotCom.Amazon.Service/Source/Service/Service.csproj
+++ b/AdamDotCom.Amazon.Service/Source/Service/Service.csproj
@@ -44,9 +44,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
@@ -57,22 +55,18 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmazonService.cs" />
+    <Compile Include="Reviews.cs" />
     <Compile Include="Utilities\RestError.cs" />
+    <Compile Include="Utilities\RestException.cs" />
     <Compile Include="Utilities\WebHttpWithExceptions.cs" />
     <Compile Include="Utilities\WebHttpWithExceptionsElement.cs" />
     <Compile Include="IAmazon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wishlist.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
