--- a/AdamDotCom.Amazon.Service/Source/Unit.Tests/Unit.Tests.csproj
+++ b/AdamDotCom.Amazon.Service/Source/Unit.Tests/Unit.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{E06D39A3-B851-45B0-869B-DB9574AF2001}</ProjectGuid>
+    <ProjectGuid>{E4C98C86-0F2A-41CB-80E3-D6BA371974B5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AdamDotCom.Amazon.Service</RootNamespace>
-    <AssemblyName>AdamDotCom.Amazon.Service</AssemblyName>
+    <RootNamespace>Unit.Tests</RootNamespace>
+    <AssemblyName>Unit.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,48 +31,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AdamDotCom.Amazon, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\AdamDotCom.Amazon.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceModel.Web, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Program Files\Microsoft WCF REST\WCF REST Starter Kit Preview 2\Assemblies\Microsoft.ServiceModel.Web.dll</HintPath>
+      <HintPath>..\..\Dependencies\nUnit\bin\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
-    <Reference Include="System.Runtime.Serialization">
-      <RequiredTargetFramework>3.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.ServiceModel">
-      <RequiredTargetFramework>3.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.ServiceModel.Web">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.XML" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProfileSniffer.cs" />
-    <Compile Include="AmazonService.cs" />
-    <Compile Include="ErrorCode.cs" />
-    <Compile Include="Profile.cs" />
-    <Compile Include="Reviews.cs" />
-    <Compile Include="RestErrorMessage.cs" />
-    <Compile Include="Utilities\RestException.cs" />
-    <Compile Include="Utilities\WebHttpWithExceptions.cs" />
-    <Compile Include="Utilities\WebHttpWithExceptionsElement.cs" />
-    <Compile Include="IAmazon.cs" />
+    <Compile Include="AmazonProfileSnifferTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Wishlist.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Service\Service.csproj">
+      <Project>{E06D39A3-B851-45B0-869B-DB9574AF2001}</Project>
+      <Name>Service %28Service\Service%29</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
