Removed reference to the Settings file.

--- a/AdamDotCom.Amazon/source/WebServiceTranslator/WebServiceTranslator.csproj
+++ b/AdamDotCom.Amazon/source/WebServiceTranslator/WebServiceTranslator.csproj
@@ -65,20 +65,12 @@
     <Compile Include="ListItemDTO.cs" />
     <Compile Include="ProductDTO.cs" />
     <Compile Include="ProductMapper.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
     <Compile Include="ReviewDTO.cs" />
     <Compile Include="ReviewMapper.cs" />
     <Compile Include="ListMapper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
