--- a/trunk/AdamDotCom.Amazon.Service/Source/ServiceHost/Web.config
+++ b/trunk/AdamDotCom.Amazon.Service/Source/ServiceHost/Web.config
@@ -1,5 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
+  <appSettings>
+    <add key="AwsAccessKey" value="1MRFMGASE6CQKS2WTMR2" />
+    <add key="AssociateTag" value="adamkahtavaap-20" />
+    <add key="SecretAccessKey" value="XQDk151teVewB/F2wKQkUEb98aIzZYE1sA/lCrt0" />
+    <add key="EnableCaching" value="True" />
+  </appSettings>
+
   <system.serviceModel>
     <services>
       <service name="AdamDotCom.Amazon.Service.AmazonService" behaviorConfiguration="Default">
